Remove separate project for test report aggregation

--- a/gradle/build-logic/src/main/groovy/account.jacoco-aggregation.gradle
+++ b/gradle/build-logic/src/main/groovy/account.jacoco-aggregation.gradle
@@ -34,7 +34,7 @@ configurations {
 // Task to gather code coverage from multiple subprojects
 def codeCoverageReport = tasks.register("codeCoverageReport", JacocoReport) {
     it.additionalClassDirs(configurations.runtimeClasspath.asFileTree.filter { it.path.contains("/build/libs/") })
-    it.additionalSourceDirs(configurations.sourcesPath)
+    it.additionalSourceDirs(configurations.sourcesPath.incoming.artifactView { it.lenient(true) }.files)
     it.executionData(configurations.coverageDataPath.incoming.artifactView { it.lenient(true) }.files.filter { it.exists() })
 
     it.reports {
