--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id("account.service-conventions")
+    id("account.jacoco-aggregation")
 }
 
 def eventstoreImpl = providers.gradleProperty("eventstore").forUseAtConfigurationTime().orElse("postgres")
@@ -50,6 +51,16 @@ dependencies {
 application {
     mainClass.set("lt.rieske.accounts.App")
 }
+
+tasks.named("codeCoverageReport") {
+    // FIXME: this should somehow be resolved using configurations as is done with transitive dependencies
+    it.additionalClassDirs(sourceSets.main.java.outputDir)
+    it.additionalSourceDirs(sourceSets.main.java.sourceDirectories)
+    it.executionData(tasks.named("test").map { task ->
+        task.extensions.getByType(JacocoTaskExtension).destinationFile
+    })
+}
+
 
 tasks.named("e2eTest") {
     it.dependsOn("integrationTest")
