Revert "Fix coveralls"
This reverts commit 2a22e0155ed93d452c3ed706fd4b93fc1a7a5f3c.

--- a/gradle/build-logic/src/main/groovy/account.jacoco-aggregation.gradle
+++ b/gradle/build-logic/src/main/groovy/account.jacoco-aggregation.gradle
@@ -53,9 +53,9 @@ coveralls {
 
 tasks.named("coveralls") {
     doFirst {
+        println(configurations.sourcesPath.flatten())
         coveralls {
-            // FIXME: all sources should be resolved in sourcesPath configuration
-            sourceDirs += configurations.sourcesPath.incoming.artifactView { it.lenient(true) }.files.files + sourceSets.main.java.sourceDirectories
+            sourceDirs = configurations.sourcesPath.flatten()
         }
     }
 }
