--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ includeBuild("gradle/build-logic")
 include("platform")
 include("account-service")
 include("eventstore")
+include("code-coverage-report")
