--- a/gradle/build-logic/src/main/groovy/account.java-conventions.gradle
+++ b/gradle/build-logic/src/main/groovy/account.java-conventions.gradle
@@ -35,6 +35,7 @@ configurations {
         visible = false
         canBeResolved = false
         canBeConsumed = true
+        extendsFrom(runtimeElements)
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
             attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
@@ -50,6 +51,7 @@ configurations {
         visible = false
         canBeResolved = false
         canBeConsumed = true
+        extendsFrom(implementation)
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
             attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
