--- a/gradle/build-logic/src/main/groovy/account.code-coverage-aggregation.gradle
+++ b/gradle/build-logic/src/main/groovy/account.code-coverage-aggregation.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id("internal.jacoco")
+    id("account.jacoco")
     id("com.github.kt3k.coveralls")
 }
 
@@ -43,8 +43,8 @@ def codeCoverageReport = tasks.register("codeCoverageReport", JacocoReport) {
     it.executionData(currentProjectTestCoverageProvider)
 
     it.reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
