--- a/gradle/build-logic/src/main/groovy/account.java.gradle
+++ b/gradle/build-logic/src/main/groovy/account.java.gradle
@@ -35,7 +35,7 @@ sourceSets {
 }
 
 configurations {
-    integrationTestImplementation.extendsFrom(implementation, testFixturesImplementation)
+    integrationTestImplementation.extendsFrom(implementation)
 }
 
 def integrationTest = tasks.register("integrationTest", Test) {
