Add docker healthcheck

--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,9 +1,10 @@
-FROM openjdk:17-jdk-slim
+FROM openjdk:17-jdk
 
 EXPOSE 8080
 
 ENV JAVA_OPTS -Xmx64m -Xms64m
 
 ENTRYPOINT /opt/service/account-service/bin/account-service
+HEALTHCHECK --interval=1s CMD curl -s -f http://localhost:8080/ping || exit 1
 
 ADD build/distributions/account-service.tar /opt/service/
