--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -19,9 +19,7 @@ dependencies {
         api("org.flywaydb:flyway-mysql:$flywayVersion")
         api("org.postgresql:postgresql:42.3.3")
         api("mysql:mysql-connector-java:8.0.28")
-        api("org.slf4j:slf4j-api") {
-            version { strictly("1.7.32") }
-        }
+        api("org.slf4j:slf4j-api:1.7.32")
 
         // test
         api("org.junit.jupiter:junit-jupiter:5.7.2")
