Remove deprecated/unneeded method call

--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id("account.code-coverage-aggregation")
 }
 
-def eventstoreImpl = providers.gradleProperty("eventstore").forUseAtConfigurationTime().orElse("postgres")
+def eventstoreImpl = providers.gradleProperty("eventstore").orElse("postgres")
 
 dependencies {
     implementation(platform(project(":platform")))
