--- a/account-service/src/e2eTest/resources/e2e-test.yml
+++ b/account-service/src/e2eTest/resources/e2e-test.yml
@@ -13,7 +13,7 @@ services:
     mem_limit: 32M
 
   account:
-    build: ../../..
+    image: account:snapshot
     ports:
       - 8080
     environment:
