--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,8 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
+        VERSION: ${{ steps.release_config.outputs.version }}
       run: |
-        docker tag ${SERVICE_NAME}:snapshot ${DOCKER_USER}/${SERVICE_NAME}:${{ steps.release_config.outputs.version }}
+        docker tag ${SERVICE_NAME}:snapshot $DOCKER_USER/$SERVICE_NAME:$VERSION
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        docker push $DOCKER_USER/${SERVICE_NAME}
+        docker push $DOCKER_USER/$SERVICE_NAME:$VERSION
