--- a/gradle/build-logic/src/main/groovy/account.service.gradle
+++ b/gradle/build-logic/src/main/groovy/account.service.gradle
@@ -1,5 +1,6 @@
 plugins {
     id("account.java")
+    id("account.code-coverage-aggregation")
     id("application")
     id("com.palantir.docker")
 }
