--- a/docker-compose-mysql.yml
+++ b/docker-compose-mysql.yml
@@ -13,7 +13,7 @@ services:
     mem_limit: 32M
 
   account:
-    build: account-service
+    image: account:snapshot
     ports:
       - 8080
     environment:
