Revert "Remove unneeded configuration"
This reverts commit 68a475e72f50b34c5d60798e5b5ddcaa5ba489ba.

--- a/gradle/build-logic/src/main/groovy/account.java.gradle
+++ b/gradle/build-logic/src/main/groovy/account.java.gradle
@@ -33,4 +33,8 @@ tasks.withType(Test).configureEach {
     systemProperties["junit.jupiter.execution.parallel.mode.default"] = "concurrent"
 }
 
+configurations {
+    integrationTestImplementation.extendsFrom(implementation)
+}
+
 tasks.named("check") { it.dependsOn(testing.suites.integrationTest) }
