Remove some duplication in Dockerfile

--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,10 +1,10 @@
 FROM eclipse-temurin:17-jre
-
 EXPOSE 8080
 
+ENV SERVICE_NAME=account-service
 ENV JAVA_OPTS -Xmx64m -Xms64m
 
-ENTRYPOINT /opt/service/account-service/bin/account-service
+ENTRYPOINT /opt/service/$SERVICE_NAME/bin/$SERVICE_NAME
 HEALTHCHECK --interval=5s CMD curl -s -f http://localhost:8080/ping || exit 1
 
-ADD account-service.tar /opt/service/
+ADD $SERVICE_NAME.tar /opt/service/
