--- a/gradle/build-logic/gradle/libs.versions.toml
+++ b/gradle/build-logic/gradle/libs.versions.toml
@@ -1,3 +1,3 @@
 [libraries]
-dockerGradle = "com.palantir.gradle.docker:gradle-docker:0.34.0"
+dockerGradle = "com.bmuschko:gradle-docker-plugin:9.1.0"
 coveralls = "gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0"
