--- a/gradle/build-logic/src/main/groovy/account.service.gradle
+++ b/gradle/build-logic/src/main/groovy/account.service.gradle
@@ -2,7 +2,7 @@ plugins {
     id("account.java")
     id("account.code-coverage-aggregation")
     id("application")
-    id("com.palantir.docker")
+    id("com.bmuschko.docker-remote-api")
 }
 
 testing.suites {
@@ -27,9 +27,15 @@ tasks.named("build") {
     it.dependsOn(tasks.named("docker"))
 }
 
-docker {
-    name = "${rootProject.name}:snapshot"
-    files(tasks.named("distTar"))
+tasks.register("prepareDockerContext", Copy) {
+    into("build/docker")
+    from(tasks.named("distTar"))
+    from("Dockerfile")
+}
+
+tasks.register("docker", com.bmuschko.gradle.docker.tasks.image.DockerBuildImage) {
+    dependsOn("prepareDockerContext")
+    images.add("${rootProject.name}:snapshot")
 }
 
 tasks.named("check") { it.dependsOn(testing.suites.e2eTest) }
