--- a/gradle/build-logic/src/main/groovy/account.java.gradle
+++ b/gradle/build-logic/src/main/groovy/account.java.gradle
@@ -15,6 +15,9 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 testing.suites {
+    test {
+        useJUnitJupiter()
+    }
     integrationTest(JvmTestSuite) {
         targets {
             all {
@@ -27,7 +30,6 @@ testing.suites {
 }
 
 tasks.withType(Test).configureEach {
-    useJUnitPlatform()
     maxParallelForks = 8
     systemProperties["junit.jupiter.execution.parallel.enabled"] = true
     systemProperties["junit.jupiter.execution.parallel.mode.default"] = "concurrent"
