Use layout.buildDirectory instead of hardcoded reference

--- a/gradle/build-logic/src/main/groovy/account.service.gradle
+++ b/gradle/build-logic/src/main/groovy/account.service.gradle
@@ -28,7 +28,7 @@ tasks.named("build") {
 }
 
 tasks.register("prepareDockerContext", Copy) {
-    into("build/docker")
+    into(layout.buildDirectory.dir("docker"))
     from(tasks.named("distTar"))
     from("Dockerfile")
 }
