Don't use configuration cache in code coverage jobs

--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -25,4 +25,4 @@ jobs:
       env:
         COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
       with:
-        arguments: codeCoverageReport coveralls
+        arguments: codeCoverageReport coveralls --no-configuration-cache
