--- a/gradle/build-logic/build.gradle
+++ b/gradle/build-logic/build.gradle
@@ -3,6 +3,6 @@ plugins {
 }
 
 dependencies {
-    implementation(libs.dockerGradle)
+    implementation(libs.servicePlugins)
     implementation(libs.coveralls)
 }
